@@ -1,3 +1,10 @@
+2025-09-25
+
+- Fixed script aborting when previous theme file no longer exists
+- Improved moving focus by mouse button 1 click away from text input fields
+- Added new internal render themes "DARK" and "INDIGO"
+  (server version >= 0.26.1.0)
+
 2025-08-27
 
 - Speed up console output
